--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@
     <header class="s-header">
       <div class="header-logo">
         <a class="site-logo" href="/index.html"
-          ><img src="/images/logo.png" alt="Homepage"
+          ><img src="images/logo.png" alt="Homepage"
         /></a>
       </div>
 
