added my photos

--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
 
             <div class="col-six tab-full">
 
-                <img src="images/portfolio/gallery/g-shutterbug.jpg" alt="">
+                <img src="images/work-pf.jpg" alt="work-pf">
 
             </div>
 
             <div class="col-six tab-full">
 
-                <img src="images/portfolio/gallery/g-shutterbug.jpg" alt="">
+                <img src="images/christmas-pf.jpeg" alt="christmas-pf">
 
             </div>
 
@@ -299,7 +299,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-beetle.jpg" class="thumb-link" title="Gwen's 1st" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-gwen.jpg" class="thumb-link" title="Gwen's 1st" data-size="1050x700">
                                 <img src="images/portfolio/beetle.jpg"
                                      srcset="images/portfolio/beetle.jpg 1x, images/portfolio/beetle@2x.jpg 2x" alt="Gwens1st">
                                 <span class="shadow-overlay"></span>
@@ -330,9 +330,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-lighthouse.jpg" class="thumb-link" title="Lighthouse" data-size="1050x700">
-                                <img src="images/portfolio/lighthouse.jpg"
-                                     srcset="images/portfolio/lighthouse.jpg 1x, images/portfolio/lighthouse@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-samantha.jpg" class="thumb-link" title="Christian & Samantha" data-size="1050x700">
+                                <img src="images/portfolio/gallery/g-samantha.jpg"
+                                     srcset="images/portfolio/gallery/g-samantha.jpg 1x, images/portfolio/gallery/g-samantha.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -361,9 +361,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-salad.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/salad.jpg"
-                                     srcset="images/portfolio/salad.jpg 1x, images/portfolio/salad@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-qingyi.jpg" class="thumb-link" data-size="1050x700">
+                                <img src="images/portfolio/gallery/g-qingyi.jpg"
+                                     srcset="images/portfolio/gallery/g-qingyi.jpg 1x, images/portfolio/gallery/g-qingyi.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -392,9 +392,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-woodcraft.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/woodcraft.jpg"
-                                     srcset="images/portfolio/woodcraft.jpg 1x, images/portfolio/woodcraft@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-jerald.jpg" class="thumb-link" data-size="1050x700">
+                                <img src="images/portfolio/gallery/g-jerald.jpg"
+                                     srcset="images/portfolio/gallery/g-jerald.jpg 1x, images/portfolio/gallery/g-jerald.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -423,9 +423,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-skaterboy.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/skaterboy.jpg"
-                                     srcset="images/portfolio/skaterboy.jpg 1x, images/portfolio/skaterboy@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-nightfestival2.jpg" class="thumb-link" data-size="1050x700">
+                                <img src="images/portfolio/gallery/g-nightfestival2.jpg"
+                                     srcset="images/portfolio/gallery/g-nightfestival2.jpg 1x, images/portfolio/gallery/g-nightfestival2.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -485,9 +485,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-minimalismo.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/minimalismo.jpg"
-                                     srcset="images/portfolio/minimalismo.jpg 1x, images/portfolio/minimalismo@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-passageintime.jpg" class="thumb-link" data-size="1050x700">
+                                <img src="images/portfolio/gallery/g-passageintime.jpg"
+                                     srcset="images/portfolio/gallery/g-passageintime.jpg 1x, images/portfolio/gallery/g-passageintime.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
