--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-gwen.jpg" class="thumb-link" title="Gwen's 1st" data-size="1050x700">
-                                <img src="images/portfolio/beetle.jpg"
-                                     srcset="images/portfolio/beetle.jpg 1x, images/portfolio/beetle@2x.jpg 2x" alt="Gwens1st">
+                                <img src="images/portfolio/gallery/g-gwen.jpg"
+                                     srcset="images/portfolio/gallery/g-gwen.jpg 1x, images/portfolio/gallery/g-gwen.jpg 2x" alt="Gwens1st">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -330,7 +330,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-samantha.jpg" class="thumb-link" title="Christian & Samantha" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-samantha.jpg" class="thumb-link" title="Christian & Samantha" data-size="4000x6000">
                                 <img src="images/portfolio/gallery/g-samantha.jpg"
                                      srcset="images/portfolio/gallery/g-samantha.jpg 1x, images/portfolio/gallery/g-samantha.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -392,7 +392,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-jerald.jpg" class="thumb-link" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-jerald.jpg" class="thumb-link" data-size="3900x5900">
                                 <img src="images/portfolio/gallery/g-jerald.jpg"
                                      srcset="images/portfolio/gallery/g-jerald.jpg 1x, images/portfolio/gallery/g-jerald.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -423,7 +423,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-nightfestival2.jpg" class="thumb-link" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-nightfestival2.jpg" class="thumb-link" data-size="3600x5400">
                                 <img src="images/portfolio/gallery/g-nightfestival2.jpg"
                                      srcset="images/portfolio/gallery/g-nightfestival2.jpg 1x, images/portfolio/gallery/g-nightfestival2.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -454,9 +454,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-liberty.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/liberty.jpg"
-                                     srcset="images/portfolio/liberty.jpg 1x, images/portfolio/liberty@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-nightfestival.jpg" class="thumb-link" data-size="1050x700">
+                                <img src="images/portfolio/gallery/g-nightfestival.jpg"
+                                     srcset="images/portfolio/gallery/g-nightfestival.jpg 1x, images/portfolio/liberty@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -485,7 +485,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-passageintime.jpg" class="thumb-link" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-passageintime.jpg" class="thumb-link" data-size="2976x3720">
                                 <img src="images/portfolio/gallery/g-passageintime.jpg"
                                      srcset="images/portfolio/gallery/g-passageintime.jpg 1x, images/portfolio/gallery/g-passageintime.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -516,9 +516,40 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-shutterbug.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/shutterbug.jpg"
-                                     srcset="images/portfolio/shutterbug.jpg 1x, images/portfolio/shutterbug@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-redbridge.jpg" class="thumb-link" data-size="5749x4000">
+                                <img src="images/portfolio/gallery/g-redbridge.jpg"
+                                     srcset="images/portfolio/gallery/g-redbridge.jpg 1x, images/portfolio/gallery/g-redbridge.jpg 2x" alt="">
+                                <span class="shadow-overlay"></span>
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                Thirst Easter Drama
+                            </h3>
+                            <p class="item-folio__cat">
+                                Event
+                            </p>
+                        </div>
+
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
+                        </a>
+
+                        <span class="item-folio__caption">
+                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                        </span>
+
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
+
+                <div class="masonry__brick">
+                    <div class="item-folio">
+
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/gallery/g-redbridge.jpg" class="thumb-link" data-size="5749x4000">
+                                <img src="images/portfolio/gallery/g-redbridge.jpg"
+                                     srcset="images/portfolio/gallery/g-redbridge.jpg 1x, images/portfolio/gallery/g-redbridge.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -607,9 +638,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-beetle.jpg" class="thumb-link" title="The Beetle Car" data-size="1050x700">
-                                <img src="images/portfolio/beetle.jpg"
-                                     srcset="images/portfolio/beetle.jpg 1x, images/portfolio/beetle@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/projects/p-ValitPoster.jpg" class="thumb-link" title="The Beetle Car" data-size="7000x9900">
+                                <img src="images/portfolio/projects/p-ValitLogo.png"
+                                     srcset="images/portfolio/projects/p-ValitLogo.png 1x, images/portfolio/projects/p-ValitLogo.png 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -638,9 +669,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-lighthouse.jpg" class="thumb-link" title="Lighthouse" data-size="1050x700">
-                                <img src="images/portfolio/lighthouse.jpg"
-                                     srcset="images/portfolio/lighthouse.jpg 1x, images/portfolio/lighthouse@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-sip.jpg" class="thumb-link" title="Lighthouse" data-size="1050x700">
+                                <img src="images/portfolio/gallery/g-sip.jpg"
+                                     srcset="images/portfolio/gallery/g-sip.jpg 1x, images/portfolio/gallery/g-sip.jpg 2x" alt="Social Innovation Project">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -670,9 +701,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-salad.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/salad.jpg"
-                                     srcset="images/portfolio/salad.jpg 1x, images/portfolio/salad@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/projects/p-AppDev.png" class="thumb-link" data-size="1050x700">
+                                <img src="images/portfolio/projects/p-AppDev.png"
+                                     srcset="images/portfolio/projects/p-AppDev.png 1x, images/portfolio/projects/p-AppDev.png 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
