added volunteer experience

--- a/index.html
+++ b/index.html
@@ -233,9 +233,6 @@
         </div> <!-- end about-content timeline -->
 
 
-
-
-
         <div class="row about-content about-content--timeline">
 
             <div class="col-six text-left left">
@@ -275,6 +272,97 @@
             </div> <!-- end left -->
 
         </div> <!-- end about-content timeline -->
+
+
+
+        <div class="row about-content about-content--timeline">
+
+                <div class="col-full text-left">
+                    <h3>Volunteer Experience</h3>
+                </div>
+
+                <div class="col-six tab-full left">
+                    <div class="timeline">
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">2018 - Present</p>
+                                <h3>Youth Leader</h3>
+                                <h5>Grace Assembly of God</h5>
+                            </div>
+                            <div class="timeline__desc">
+                                <p>&#8226; Leading a group of youths in weekly sessions of bible study and fellowship <br/>
+                                &#8226; Conduct the youth campus outreach bi-weekly <br/>
+                                &#8226; Organised a youth camp of 70 people for 3 days 2 nights <br/>
+                                </p>
+                            </div>
+                        </div> <!-- end timeline__block -->
+
+                         <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">2014 - 2017</p>
+                                <h3>Audio & Visual Media Volunteer</h3>
+                                <h5>Penang Christian Center</h5>
+                            </div>
+                            <div class="timeline__desc">
+                                <p>
+                                • Managed the audio, video and sound system for weekly church services and events <br/>
+                                • Handled the social media account and edited content of social media (Facebook)<br/>
+                                • Worked with a professional team from various fields and learned invaluable technical skills<br/>
+                                • Served as a musician on a monthly basis<br/>
+                                • Planned and implemented an English Children Camp in the rural parts of Chiang Mai, Thailand
+                                </p>
+                            </div>
+                        </div> <!-- end timeline__block -->
+
+
+
+                    </div> <!-- end timeline -->
+                </div> <!-- end left -->
+
+                <div class="col-six tab-full right">
+                    <div class="timeline">
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">June 2018</p>
+                                <h3>Student Ambassador</h3>
+                                <h5>Innovfest Unbound Singapore, IMDA</h5>
+                            </div>
+                            <div class="timeline__desc">
+                                <p>
+                                        • Attended to the needs of the speaker, Head of Innovation and Omni-Channel Sephora, Mr.Simon Torring and other speakers <br>
+                                        • Organised and implemented fireside sessions for C-Level Executives, a platform where speakers could connect and share with delegates in an informal setting. Over 13,000 people around the world attended the conference
+                                </p>
+                            </div>
+                        </div> <!-- end timeline__block -->
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">July 2011 - June 2012</p>
+                                <h3>Head Prefect</h3>
+                                <h5>Methodist Boys' School Penang Malaysia</h5>
+                            </div>
+                            <div class="timeline__desc">
+                                <p>&#8226; Won a public speaking competition <br/>
+                                &#8226; Lead and assisted the daily assembly for the school of 600 students <br/>
+                                &#8226; Lead the Board of Prefects to maintain and uphold the school discipline<br/>
+                                &#8226; Conducted public speeches at numerous school events<br/>
+                                &#8226; Planned, organised and implemented team-building activities and the annual dinner of the Board of Prefects<br/>
+                                &#8226; Spearheaded a dengue campaign in conjunction with the Sanofi Pasteur Malaysia Dengue Competition<br/>
+
+                                </p>
+                            </div>
+                        </div> <!-- end timeline__block -->
+
+                    </div> <!-- end timeline -->
+                </div> <!-- end right -->
+
+            </div> <!-- end about-content timeline -->
 
     </section> <!-- end about -->
 
@@ -770,6 +858,10 @@
                 <h3>Journal</h3>
                 <h1>When I'm not rushing my projects</h1>
                 <p class="lead">Below is a compilation of my personal reflections and thoughts of life, work, play and more!</p>
+                <a href="/blog/blog.html" class="btn btn--primary">
+                    View All Post
+                </a>
+
             </div>
         </div>
 
