--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">2018 - Present</p>
+                                <p class="timeline__timeframe">Jan 2018 - Present</p>
                                 <h3>Youth Leader</h3>
                                 <h5>Grace Assembly of God</h5>
                             </div>
@@ -302,7 +302,7 @@
                          <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">2014 - 2017</p>
+                                <p class="timeline__timeframe">Jan 2014 - Mar 2017</p>
                                 <h3>Audio & Visual Media Volunteer</h3>
                                 <h5>Penang Christian Center</h5>
                             </div>
@@ -1063,22 +1063,22 @@
         <div class="row">
             <div class="col-full">
 
-                <div class="footer-logo">
+                <!-- <div class="footer-logo">
                     <a class="footer-site-logo" href="#0"><img src="images/logo.png" alt="Homepage"></a>
-                </div>
+                </div> -->
 
                 <ul class="footer-social">
                     <li><a href="http://www.linkedin.com/in/jeremycte" target="_blank">
                         <i class="im im-linkedin" aria-hidden="true"></i>
-                        <span>LinkedIn</span>
+                        <!-- <span>LinkedIn</span> -->
                     </a></li>
                     <li><a href="http://www.facebook.com/jeremycte23" target="_blank">
                         <i class="im im-facebook" aria-hidden="true"></i>
-                        <span>Facebook</span>
+                        <!-- <span>Facebook</span> -->
                     </a></li>
                     <li><a href="http://instagram.com/ctecreatives" target="_blank">
                         <i class="im im-instagram" aria-hidden="true"></i>
-                        <span>Instagram</span>
+                        <!-- <span>Instagram</span> -->
                     </a></li>
                 </ul>
 
