deleted original them images, added Google Analytics

--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
+    <!-- Google Analytics
+    ================================================== -->
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-127632016-1', 'auto');
+    ga('send', 'pageview');
+    </script>
+    <!-- End Google Analytics -->
+
 </head>
 
 <body id="top">
@@ -147,6 +160,12 @@
             <div class="col-six tab-full left">
                 <h3>Hi, my name is Jeremy!</h3>
 
+                <h5>Some Basic Information about me</h3>
+
+                <p class="basicinfo"><strong>Age:</strong> 20 <br/>
+                <strong>Currently In:</strong> Singapore <br/>
+                <strong>Speak & Read:</strong> English, Chinese and Malay</p>
+
                 <p>I am a self taught photographer and currently living in Singapore.
                 I am available for freelance work (Event Photography). Currently, I am pursuing a Diploma in Information Technology at the School of Computing, Singapore Polytechnic. </p>
                 <p>
@@ -155,7 +174,7 @@
             </div>
 
             <div class="col-six tab-full right">
-                <h3>Professional Skills.</h3>
+                <h3>Professional Skills</h3>
 
                 <ul class="skill-bars">
                     <li>
@@ -183,17 +202,19 @@
                     <strong>ReactJS</strong>
                     </li>
                 </ul>
+
+                <div class="row about-content--buttons">
+
+                    <div class="col-full tab-full">
+                        <a href="http://bit.ly/2maavWk" target="_blank" class="btn btn--primary full-width">Download My CV</a>
+                    </div>
+
+                </div> <!-- end about-content buttons -->
             </div>
 
         </div> <!-- end about-content -->
 
-        <div class="row about-content about-content--buttons">
 
-            <div class="col-full tab-full">
-                <a href="http://bit.ly/2maavWk" target="_blank" class="btn btn--primary full-width">Download My CV</a>
-            </div>
-
-        </div> <!-- end about-content buttons -->
 
         <div class="row about-content about-content--timeline">
 
