--- a/404.html
+++ b/404.html
@@ -10,8 +10,8 @@
     ================================================== -->
     <meta charset="utf-8" />
     <title>Jeremy Chan</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="Portfolio" />
+    <meta name="author" content="Jeremy Chan" />
 
     <!-- mobile specific metas
     ================================================== -->
