--- a/index.html
+++ b/index.html
@@ -742,8 +742,8 @@
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-sip.jpg" class="thumb-link" title="Lighthouse" data-size="1050x700">
-                                <img src="images/portfolio/gallery/g-sip.jpg"
-                                     srcset="images/portfolio/gallery/g-sip.jpg 1x, images/portfolio/gallery/g-sip.jpg 2x" alt="Social Innovation Project">
+                                <img src="images/portfolio/projects/p-sip.jpg"
+                                     srcset="images/portfolio/projects/p-sip.jpg 1x, images/portfolio/projects/p-sip.jpg 2x" alt="Social Innovation Project">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -835,9 +835,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-skaterboy.jpg" class="thumb-link" data-size="1050x700">
-                                <img src="images/portfolio/skaterboy.jpg"
-                                     srcset="images/portfolio/skaterboy.jpg 1x, images/portfolio/skaterboy@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/projects/p-ValitLogo.png" class="thumb-link" data-size="1050x700">
+                                <img src="images/portfolio/projects/p-ValitLogo.png"
+                                     srcset="images/portfolio/projects/p-ValitLogo.png 1x, images/portfolio/projects/p-ValitLogo.png 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
