complete captions and compressed all index.html images

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     </li>
                     <li>
                     <div class="progress percent70"><span>70%</span></div>
-                    <strong>Database Systems (Microsoft SQL & MySQL)</strong>
+                    <strong>Database Systems</strong>
                     </li>
                     <li>
                     <div class="progress percent85"><span>85%</span></div>
@@ -433,7 +433,7 @@
                         </div>
 
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Gwen's 1st Birthday Shower Party</p>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -460,7 +460,7 @@
                         </div>
 
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Street Photography for Christian & Samantha after their basking session. Taken in Penang, Malaysia</p>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -482,12 +482,12 @@
                                 Qing Yi's Birthday
                             </h3>
                             <p class="item-folio__cat">
-                                Birthdays
+                                Celebration
                             </p>
                         </div>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Surprised birthday party for Qing Yi's 21st Birthday</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -514,7 +514,7 @@
                         </div>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>What keeps you up at night?</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -541,7 +541,7 @@
                         </div>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Singapore Night Festival 2018 at Bras Basah</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -560,15 +560,15 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Vietnam
+                                Magnify
                             </h3>
                             <p class="item-folio__cat">
-                                Travel
+                                Street Photography
                             </p>
                         </div>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Singapore Night Festival 2018 at Bras Basah</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -595,7 +595,7 @@
                         </div>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>The passage explores the emotional connection we develop with light and sound. Passage is an immersive, minimalist, contemplative and interactive artwork by Serge Mahue.</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -622,7 +622,7 @@
                         </div>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Keep calm and smile!</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -641,7 +641,7 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Fun
+                                Perspective
                             </h3>
                             <p class="item-folio__cat">
                                 Portraits
@@ -649,7 +649,7 @@
                         </div>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>TGIF</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -699,7 +699,9 @@
                         </div>
 
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Valit, a blockchain application built using Ethereum Network, Solidity, ReactJS, HTML5 and CSS3. Valit is proof-of-concept for ticket validation via blockchain. Check it out
+                                <a target="_Blank" href="https://valit-client.surge.sh/">here</a>
+                            </p>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -888,10 +890,10 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="/blog/blog-single.html">Jan 15, 2019</a>
+                            <a href="/blog/composed-relax.html">Jan 15, 2019</a>
                         </div>
 
-                        <h2 class="h01"><a href="/blog/blog-single.html">Be Composed and Relax
+                        <h2 class="h01"><a href="/blog/composed-relax.html">Be Composed and Relax
                         </a></h2>
                         <p>
                             Recently, a close cousin of mine visited Singapore for the very first time for a week. As it was her first time in SG, I wanted to make the best out of it. One of the places, I brought my cousin was the Art Science Museum, the Future World Exhibition. Being in this place brought a sense of awe and...
