added ../path for blog links

--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
                 <h3>Journal</h3>
                 <h1>When I'm not rushing my projects</h1>
                 <p class="lead">Below is a compilation of my personal reflections and thoughts of life, work, play and more!</p>
-                <a href="/blog/blog.html" class="btn btn--primary">
+                <a href="../blog/blog.html" class="btn btn--primary">
                     View All Post
                 </a>
 
@@ -854,9 +854,9 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="/blog/learning-git.html">Oct 22, 2019</a>
+                            <a href="../blog/learning-git.html">Oct 22, 2019</a>
                         </div>
-                        <h2 class="h01"><a href="/blog/learning-git.html">Learning Git as a beginner</a></h2>
+                        <h2 class="h01"><a href="../blog/learning-git.html">Learning Git as a beginner</a></h2>
                         <p>
                             Interested in learning Git? Never done it before?
                             Confused by your lecturers teaching/explaination?
@@ -866,23 +866,23 @@
                         </p>
 
                         <div class="blog-cat">
-                            <a href="/blog/blog.html">Coding</a><a href="/blog/blog.html">Learning</a>
+                            <a href="../blog/blog.html">Coding</a><a href="../blog/blog.html">Learning</a>
                         </div>
                     </article>
 
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="/blog/digital-minimalism.html">Sept 09, 2019</a>
+                            <a href="../blog/digital-minimalism.html">Sept 09, 2019</a>
                         </div>
 
-                        <h2 class="h01"><a href="/blog/digital-minimalism.html">Digital Minimalism</a></h2>
+                        <h2 class="h01"><a href="../blog/digital-minimalism.html">Digital Minimalism</a></h2>
                         <p>
                             Social media is great and all but I came to realisation that social media is starting to "own" us. Stealing our time and productivity everyday. Are you aware of how much technology has affected us all? Ask yourself, how much time did you spend on your phone the past week when all that time, could have been...
                         </p>
 
                         <div class="blog-cat">
-                                <a href="/blog/blog.html">Minimalism</a><a href="/blog/blog.html">Addiction</a>
+                                <a href="../blog/blog.html">Minimalism</a><a href="../blog/blog.html">Addiction</a>
                         </div>
 
 
@@ -890,17 +890,17 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="/blog/composed-relax.html">Jan 15, 2019</a>
+                            <a href="../blog/composed-relax.html">Jan 15, 2019</a>
                         </div>
 
-                        <h2 class="h01"><a href="/blog/composed-relax.html">Be Composed and Relax
+                        <h2 class="h01"><a href="../blog/composed-relax.html">Be Composed and Relax
                         </a></h2>
                         <p>
                             Recently, a close cousin of mine visited Singapore for the very first time for a week. As it was her first time in SG, I wanted to make the best out of it. One of the places, I brought my cousin was the Art Science Museum, the Future World Exhibition. Being in this place brought a sense of awe and...
                         </p>
 
                         <div class="blog-cat">
-                            <a href="/blog/blog.html">Photography</a>
+                            <a href="../blog/blog.html">Photography</a>
                         </div>
 
 
@@ -908,16 +908,16 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="/blog/blog-single.html">Dec 7, 2018</a>
+                            <a href="../blog/blog-single.html">Dec 7, 2018</a>
                         </div>
 
-                        <h2 class="h01"><a href="/blog/blog-single.html">A Year in Review</a></h2>
+                        <h2 class="h01"><a href="../blog/blog-single.html">A Year in Review</a></h2>
                         <p>
                             As the year comes to an end, and another new year comes forward. Some are happy, some are glad as the year comes to an end. But, I would like to be grateful for all the things that has happened in this year. Looking back at all the memories and new friends I make throughout this year, God has been...
                         </p>
 
                         <div class="blog-cat">
-                            <a href="/blog/blog.html">Grateful</a>
+                            <a href="../blog/blog.html">Grateful</a>
                         </div>
                     </article>
 
