added 2 photography img, reduced transition of gallery 0.3s and added alt text

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-samantha.jpg" class="thumb-link" title="Christian & Samantha" data-size="4000x6000">
                                 <img src="images/portfolio/gallery/g-samantha.jpg"
-                                     srcset="images/portfolio/gallery/g-samantha.jpg 1x, images/portfolio/gallery/g-samantha.jpg 2x" alt="">
+                                     srcset="images/portfolio/gallery/g-samantha.jpg 1x, images/portfolio/gallery/g-samantha.jpg 2x" alt="Christian & Samantha">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -472,7 +472,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-qingyi.jpg" class="thumb-link" data-size="1050x700">
                                 <img src="images/portfolio/gallery/g-qingyi.jpg"
-                                     srcset="images/portfolio/gallery/g-qingyi.jpg 1x, images/portfolio/gallery/g-qingyi.jpg 2x" alt="">
+                                     srcset="images/portfolio/gallery/g-qingyi.jpg 1x, images/portfolio/gallery/g-qingyi.jpg 2x" alt="Qing Yi BDay">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -499,7 +499,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-jerald.jpg" class="thumb-link" data-size="3900x5900">
                                 <img src="images/portfolio/gallery/g-jerald.jpg"
-                                     srcset="images/portfolio/gallery/g-jerald.jpg 1x, images/portfolio/gallery/g-jerald.jpg 2x" alt="">
+                                     srcset="images/portfolio/gallery/g-jerald.jpg 1x, images/portfolio/gallery/g-jerald.jpg 2x" alt="Jerald Portraiture">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -526,7 +526,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-nightfestival2.jpg" class="thumb-link" data-size="3600x5400">
                                 <img src="images/portfolio/gallery/g-nightfestival2.jpg"
-                                     srcset="images/portfolio/gallery/g-nightfestival2.jpg 1x, images/portfolio/gallery/g-nightfestival2.jpg 2x" alt="">
+                                     srcset="images/portfolio/gallery/g-nightfestival2.jpg 1x, images/portfolio/gallery/g-nightfestival2.jpg 2x" alt="Night Festival">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -553,7 +553,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-nightfestival.jpg" class="thumb-link" data-size="1050x700">
                                 <img src="images/portfolio/gallery/g-nightfestival.jpg"
-                                     srcset="images/portfolio/gallery/g-nightfestival.jpg 1x, images/portfolio/liberty@2x.jpg 2x" alt="">
+                                     srcset="images/portfolio/gallery/g-nightfestival.jpg 1x, images/portfolio/gallery/g-nightfestival.jpg 2x" alt="Night festival">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -580,7 +580,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-passageintime.jpg" class="thumb-link" data-size="2976x3720">
                                 <img src="images/portfolio/gallery/g-passageintime.jpg"
-                                     srcset="images/portfolio/gallery/g-passageintime.jpg 1x, images/portfolio/gallery/g-passageintime.jpg 2x" alt="">
+                                     srcset="images/portfolio/gallery/g-passageintime.jpg 1x, images/portfolio/gallery/g-passageintime.jpg 2x" alt="Passage in Time">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -607,7 +607,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-valen.jpg" class="thumb-link" data-size="1280x853">
                                 <img src="images/portfolio/gallery/g-valen.jpg"
-                                     srcset="images/portfolio/gallery/g-valen.jpg 1x, images/portfolio/gallery/g-valen.jpg 2x" alt="">
+                                     srcset="images/portfolio/gallery/g-valen.jpg 1x, images/portfolio/gallery/g-valen.jpg 2x" alt="Valen">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -634,7 +634,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-redbridge.jpg" class="thumb-link" data-size="5749x4000">
                                 <img src="images/portfolio/gallery/g-redbridge.jpg"
-                                     srcset="images/portfolio/gallery/g-redbridge.jpg 1x, images/portfolio/gallery/g-redbridge.jpg 2x" alt="">
+                                     srcset="images/portfolio/gallery/g-redbridge.jpg 1x, images/portfolio/gallery/g-redbridge.jpg 2x" alt="Red Bridge">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -654,6 +654,57 @@
 
                     </div> <!-- end item-folio -->
                 </div> <!-- end masonry__brick -->
+
+                <div class="masonry__brick">
+                    <div class="item-folio">
+
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/gallery/g-studio.jpg" class="thumb-link" data-size="4000x6000">
+                                <img src="images/portfolio/gallery/g-studio.jpg"
+                                     srcset="images/portfolio/gallery/g-studio.jpg 1x, images/portfolio/gallery/g-studio.jpg 2x" alt="Studio Shoot">
+                                <span class="shadow-overlay"></span>
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                Studio Shoot
+                            </h3>
+                            <p class="item-folio__cat">
+                                Portraits
+                            </p>
+                        </div>
+
+                        <span class="item-folio__caption">
+                            <p>A series of photography shots of different people from Singapore Polytechnic</p>
+                        </span>
+
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
+
+                <div class="masonry__brick">
+                    <div class="item-folio">
+
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/gallery/g-sheena.jpg" class="thumb-link" data-size="6000x4000">
+                                <img src="images/portfolio/gallery/g-sheena.jpg"
+                                     srcset="images/portfolio/gallery/g-sheena.jpg 1x, images/portfolio/gallery/g-sheena.jpg 2x" alt="Sheena's Bday">
+                                <span class="shadow-overlay"></span>
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                Sheena's Birthday
+                            </h3>
+                            <p class="item-folio__cat">
+                                Celebration
+                            </p>
+                        </div>
+
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
+                
 
             </div>
 
@@ -741,7 +792,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/projects/p-AppDev.png" class="thumb-link" data-size="1050x700">
                                 <img src="images/portfolio/projects/p-AppDev.png"
-                                     srcset="images/portfolio/projects/p-AppDev.png 1x, images/portfolio/projects/p-AppDev.png 2x" alt="">
+                                     srcset="images/portfolio/projects/p-AppDev.png 1x, images/portfolio/projects/p-AppDev.png 2x" alt="Application Development">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -768,7 +819,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/projects/p-Foodify.jpg" class="thumb-link" data-size="1920x1080">
                                 <img src="images/portfolio/projects/p-Foodify.jpg"
-                                     srcset="images/portfolio/projects/p-Foodify.jpg 1x, images/portfolio/projects/p-Foodify.jpg 2x" alt="">
+                                     srcset="images/portfolio/projects/p-Foodify.jpg 1x, images/portfolio/projects/p-Foodify.jpg 2x" alt="Foodify">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
