added in DEUI project

--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/projects/p-sip.jpg" class="thumb-link" title="Lighthouse" data-size="1050x700">
+                            <a href="images/portfolio/projects/p-sip.jpg" class="thumb-link" data-size="1050x700">
                                 <img src="images/portfolio/projects/p-sip.jpg"
                                      srcset="images/portfolio/projects/p-sip.jpg 1x, images/portfolio/projects/p-sip.jpg 2x" alt="Social Innovation Project">
                                 <span class="shadow-overlay"></span>
@@ -860,6 +860,38 @@
                                 </h3>
                                 <p class="item-folio__cat">
                                    Business Intelligence
+                                </p>
+                            </div>
+
+                            <span class="item-folio__caption">
+                                <p>
+                                    Designed a data warehouse (snowflake schema) that answers various business question regarding sales. Applied ETL Process and transformed it into meaningful data shown here.
+                                    <a target="_Blank" href="https://public.tableau.com/profile/jeremy.c7065#!/vizhome/CA2V3/SalesAnaylsisStory">Tableau Sales Analysis</a>
+
+                                </p>
+                            </span>
+
+                        </div> <!-- end item-folio -->
+                    </div> <!-- end masonry__brick -->
+
+
+                    <div class="masonry__brick">
+                        <div class="item-folio">
+
+                            <div class="item-folio__thumb">
+                                <a href="images/portfolio/projects/p-DEUI.jpg" class="thumb-link" data-size="1920x1080">
+                                    <img src="images/portfolio/projects/p-DEUI.jpg"
+                                         srcset="images/portfolio/projects/p-DEUI.jpg 1x, images/portfolio/projects/p-DEUI.jpg 2x" alt="Design User Interaction">
+                                    <span class="shadow-overlay"></span>
+                                </a>
+                            </div>
+
+                            <div class="item-folio__text">
+                                <h3 class="item-folio__title">
+                                    Shopback
+                                </h3>
+                                <p class="item-folio__cat">
+                                   Design User Interaction
                                 </p>
                             </div>
 
